--- a/ETSMobile/fr.lproj/Main.storyboard
+++ b/ETSMobile/fr.lproj/Main.storyboard
@@ -965,10 +965,11 @@ http://www.clubapplets.ca</string>
                         <viewControllerLayoutGuide type="bottom" id="zCh-wc-6UW"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ten-Bm-ZwC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="kRb-M5-3Jk"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="teH-ud-FyM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1833,7 +1834,7 @@ http://www.clubapplets.ca</string>
                                 <connections>
                                     <outlet property="acronymLabel" destination="LE4-df-GA9" id="G1d-dj-EJu"/>
                                     <outlet property="gradeLabel" destination="G0d-sw-zBX" id="vB9-st-r4p"/>
-                                    <segue destination="sz3-7D-bPX" kind="showDetail" id="P3L-qJ-8PR"/>
+                                    <segue destination="yex-wP-cWO" kind="showDetail" id="mMf-iX-HGm"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -1889,7 +1890,7 @@ http://www.clubapplets.ca</string>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EvaluationIdentifier" textLabel="kNw-QV-qA2" detailTextLabel="i37-IP-mSR" style="IBUITableViewCellStyleValue1" id="Zxj-aX-wbU">
-                                <rect key="frame" x="0.0" y="49.5" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zxj-aX-wbU" id="LOU-8N-QhR">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -1920,7 +1921,7 @@ http://www.clubapplets.ca</string>
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EvaluationDetailsIdentifier" rowHeight="146" id="DNZ-Xf-jSv" customClass="ETSEvaluationCell">
-                                <rect key="frame" x="0.0" y="93.5" width="600" height="146"/>
+                                <rect key="frame" x="0.0" y="157.5" width="600" height="146"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DNZ-Xf-jSv" id="Tnh-qR-aBo">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="145.5"/>
@@ -2334,10 +2335,10 @@ http://www.clubapplets.ca</string>
         <image name="previous" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nOM-IS-xlO"/>
+        <segue reference="DZg-Ea-Jjq"/>
         <segue reference="aLx-hw-zzG"/>
-        <segue reference="lOy-zL-CqT"/>
-        <segue reference="P3L-qJ-8PR"/>
+        <segue reference="OC4-PW-vfK"/>
+        <segue reference="mMf-iX-HGm"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
